--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,13 @@
     <span class="reserved">char</span> nick[<span class="number">9</span>] = <span class="string">"{{ site.nick }}"</span>;
     </p>
     <p>
-    printf(<a href="https://{{ site.source_code.server }}/{{ site.source_code.nick }}" target="_blank"><span class="string">"https://{{ site.source_code.server }}/<span class="reserved">%s\n</span>"</span></a>,nick);
+    printf(<a href="https://{{ site.source_code.server }}/{{ site.source_code.nick }}" target="_blank"><span class="string">"https://{{ site.source_code.server }}/<span class="reserved">%s\n</span>"</span></a>,github);
+    </p>
+    <p>
+    printf(<a href="https://www.facebook.com/m.tiennnnn" target="_blank"><span class="string">"https://facebook.com/<span class="reserved">%s\n</span>"</span></a>,facebook);
+    </p>
+    <p>
+    printf(<a href="mailto:manhtien1303@gmail.com" target="_blank"><span class="string">"https://gmail.com/<span class="reserved">%s\n</span>"</span></a>,gmail);
     </p>
     <p>
     printf(<span class="string">"<span class="reserved">%s\x40</span>{{ site.mail.domain }}<span class="reserved">\x2e\\\b</span>{{ site.mail.ext }}<span class="reserved">\n</span>"</span>,nick);
