--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,10 +11,7 @@
     printf(<a href="https://www.facebook.com/m.tiennnnn" target="_blank"><span class="string">"https://facebook.com/<span class="reserved">%s\n</span>"</span></a>,facebook);
     </p>
     <p>
-    printf(<span class="string">"<span class="reserved">%s\x40</span><a href="mailto:manhtien1303@gmail.com" target="_blank"><span class="string">"gmail/<span class="reserved">\x2e\\\b</span>"</span></a>,gmail);
-    </p>
-    <p>
-    printf(<span class="string">"<span class="reserved">%s\x40</span>{{ site.mail.domain }}<span class="reserved">\x2e\\\b</span>{{ site.mail.ext }}<span class="reserved">\n</span>"</span>,nick);
+    printf(<span class="string">"<span class="reserved">%s\x40</span><a href="mailto:manhtien1303@gmail.com" target="_blank"><span class="string">"my_gmail/<span class="reserved">\x2e\\\b</span>"</span></a>,mail);
     </p>
     <!-- <p>
             printf(<a href="https://{{ site.blog.nick }}.{{ site.blog.server }}" target="_blank"><span class="string">"https://<span class="reserved">%s</span>.{{ site.blog.server }}<span class="reserved">\n</span>"</span></a>,nick);
