--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,5 +1,5 @@
 <div style="width:100%;text-align:right;">
     <a href="{{ site.baseurl }}category/" title="Category List">Category List</a>
     |
-    <a href="https://www.youtube.com/watch?v=a3Z7zEc7AXQ" title="Atom Feed Posts">Good Music</a>
+    <a href="https://www.youtube.com/watch?v=a3Z7zEc7AXQ" target="_blank">Good Music</a>
 </div>
