--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,3 +5,12 @@
     </footer>
   </div>
 </div>
+<div class="hehe">
+  <div class="col-lg-8 col-lg-offset-2">
+    <footer>
+      <p>
+         <a href="https://mtiennnnn.github.io/mtiennnnn/blog/"><span class="string">Back</span></a>
+      </p>
+    </footer>
+  </div>
+</div>
