--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <footer>
       {{ site.bye_message }} 
       <span class="reserved">or</span>
-      <a href="https://mtiennnnn.github.io/mtiennnnn/blog/"><span class="string">Go-back-to-Blog-Posts</span></a>
+      <a href="https://mtiennnnn.github.io/mtiennnnn/blog/"><span class="string">Go back to Blog Posts</span></a>
     </footer>
   </div>
 </div>
