--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     border-top: 1px dashed rgba(255,255,255,0.5);
     background-color: #161B22;
-    margin: 0 auto;
+    margin: 0px -10px 0px -10px;
     padding: 10px;
     font-family: monospace;
     font-size: 17px;
