--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 body {
     border-top: 1px dashed rgba(255,255,255,0.5);
     background-color: #161B22;
-    margin: 0px -10px 0px;
-    padding: 10px;
+    margin: 0px auto;
+    padding: 10px -10px 10px;
     font-family: monospace;
     font-size: 17px;
     line-height: unset !important;
