--- a/css/main.css
+++ b/css/main.css
@@ -2,13 +2,13 @@ body {
     border-top: 1px dashed rgba(255,255,255,0.5);
     background-color: #161B22;
     margin: 0px auto;
-    padding: 10px -10px 10px;
+    padding: 10px;
     font-family: monospace;
     font-size: 17px;
     line-height: unset !important;
     color: rgba(255,255,255,0.6);
     text-align: center;
-    //width: 800px;
+    width: 800px;
 }
 h1 {
   color: rgba(41,188,138,0.8);
