--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body {
     line-height: unset !important;
     color: rgba(255,255,255,0.6);
     text-align: center;
-    width: 800px;
+    //width: 800px;
 }
 h1 {
   color: rgba(41,188,138,0.8);
