--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ h6 { color: rgba(41,188,138,0.3); }
 footer {
     color: rgba(41,188,138,0.8);
     font-weight: bold;
-    //width: 60%;
+    width: 80%;
     border-top: dashed 1px rgba(255,255,255,0.5);
     margin: 20px auto 15px;
     padding-top: 10px;
