--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ footer {
     font-weight: bold;
     width: 60%;
     border-top: dashed 1px rgba(255,255,255,0.5);
-    margin: 20px auto 15px;
+    margin: 20px 50px 15px;
     padding-top: 10px;
 }
 header {
